--- a/LeerFicheroTermalismo/App.config
+++ b/LeerFicheroTermalismo/App.config
@@ -1,19 +1,29 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings file="">
     <clear />
-    <!--<add key="ConnectionStringExpedientes" value="Data Source=192.168.23.205;Initial Catalog=expedientes_imserso;User ID=aplicaciones;Password=aplicaciones" />-->
-    <add key="ConnectionStringExpedientes" value="Data Source=192.168.23.212\SQLSERVER2016;Initial Catalog=expedientes_imserso;User ID=jopenada;Password=rdpochni" />
+  
+    <add key="ConnectionString" value="Data Source=;Initial Catalog=;User ID=;Password=" />
     
-    <add key="prereservas_fichero_clientes" value="1"/>
-    <add key="grid_repetidas" value="0"/>
-    <add key="nacion" value="2"/>
-    <add key="nacion_1" value="2"/>
-    <add key="nacion_4" value="1"/>
-    <add key="nacion_5" value="1"/>
-    <add key="comprueba_reservas" value="1"/>
-    <add key="contrato_alta_tv" value="142"/>
-    <add key="contrato_baja_tv" value="111"/>
+    <add key="prereservas_fichero_clientes" value="1" />
+    <add key="grid_repetidas" value="0" />
+    <add key="nacion" value="2" />
+    <add key="nacion_1" value="2" />
+    <add key="nacion_4" value="1" />
+    <add key="nacion_5" value="1" />
+    <add key="comprueba_reservas" value="1" />
+    <add key="contrato_alta_tv" value="142" />
+    <add key="contrato_baja_tv" value="111" />
+	<add key="Environment" value="dev" />
 
   </appSettings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" /></startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
