fix:error platform

--- a/LeerFicheroTermalismo/App.config
+++ b/LeerFicheroTermalismo/App.config
@@ -7,8 +7,14 @@
     <add key="prereservas_fichero_clientes" value="1" />
     <add key="comprueba_reservas" value="1" />
     <add key="grid_repetidas" value="0" />
-    <add key="balnearios" value="1" />
+    <add key="balnearios" value="4,5" />
 	  <add key="Environment" value="dev" />
+    <add key="nacion" value="2"/>
+    <add key="nacion_1" value="2"/>
+    <add key="nacion_4" value="1"/>
+    <add key="nacion_5" value="1"/>
+    <add key="contrato_alta_tv" value="116"/>
+    <add key="contrato_baja_tv" value="115"/>
 
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" /></startup>
